# romea-ros2-lidar

./: .gitlab-ci.yml  AUTHORS  README.md  romea_lidar.repos  romea_lidar.rosinstall  romea_lidar_public.repos
romea_lidar/: CMakeLists.txt  package.xml
romea_lidar_bringup/: CMakeLists.txt  README.md  package.xml
romea_lidar_bringup/launch/: lidar.launch.py  lidar_driver.launch.py  sick_lms1xx.launch  sick_mrs1000.launch  sick_tim5xx.launch
romea_lidar_bringup/launch/common/: lidar3d_common.launch  lidar_common.launch  sick_lms1xx_driver.launch  sick_tim_driver.launch
romea_lidar_bringup/launch/drivers/: ouster_ros.launch.py  sick_scan.launch.py  sick_scan_xd.launch.py
romea_lidar_bringup/python/: lidar_bringup.py  romea_lidar_bringup.py
romea_lidar_bringup/script/: make_lidar3d_xacro.py  make_lidar_xacro.py
romea_lidar_bringup/scripts/: urdf_description.py
romea_lidar_bringup/test/: test_lidar_bringup.py  test_lidar_bringup.yaml  test_urdf_description.py
romea_lidar_description/: CMakeLists.txt  README.md  package.xml
romea_lidar_description/config/: ouster_os1_32_geometry.yaml  ouster_os1_32_specifications.yaml  sick_lms1xx_25hz_specifications.yaml  sick_lms1xx_50hz_specifications.yaml  sick_lms1xx_geometry.yaml  sick_lms1xx_specifications.yaml  sick_mrs1000_geometry.yaml  sick_mrs1000_specifications.yaml  sick_mrs1xxx_geometry.yaml  sick_mrs1xxx_specifications.yaml  sick_tim5xx_geometry.yaml  sick_tim5xx_specifications.yaml
romea_lidar_description/meshes/: sick_mrs1000.stl  sick_mrs6000.stl
romea_lidar_description/python/: lidar_description.py  romea_lidar_description.py
romea_lidar_description/test/: lidar_description_test.py  test_lidar_description.py
romea_lidar_description/urdf/: lidar.xacro  lidar2D.simulation.xacro  lidar2D.xacro  lidar2D.xacro.urdf  lidar3D.simulation.xacro  lidar3D.xacro  lidar3D.xacro.urdf  lidar3d.xacro  sick_lms1xx.xacro.urdf  sick_mrs1xxx.xacro.urdf  sick_tim5xx.xacro.urdf
