<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_lidar</name>
  <version>0.0.0</version>
  <description>Romea lidar metapackage</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>BSD</license>

  <author>Jean Laneurit</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>romea_lidar_bringup</exec_depend>
  <exec_depend>romea_lidar_description</exec_depend>
  <exec_depend>romea_lidar_calibration</exec_depend>
  <exec_depend>romea_lidar_gazebo</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
