<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_lidar_bringup</name>
  <version>0.0.0</version>
  <description>Package containing lidar launch files.</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>romea_common_bringup</depend>
  <depend>romea_lidar_description</depend>
  <depend>sick_scan_xd</depend>
  <depend>ros2_ouster_drivers</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
